--- a/roles/parted/meta/main.yml
+++ b/roles/parted/meta/main.yml
@@ -6,7 +6,11 @@ galaxy_info:
   description: Configure block device partitions
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
+    - name: Debian
+      versions:
+        - all
     - name: EL
       versions:
         - all
