--- a/roles/authorized_key/molecule/default/verify.yml
+++ b/roles/authorized_key/molecule/default/verify.yml
@@ -3,6 +3,8 @@
   hosts: all
   pre_tasks:
     - name: Ensure output from ssh-keygen is gathered
+      tags:
+        - authorized_key
       become: true
       ansible.builtin.command:
         cmd: >
@@ -11,11 +13,15 @@
       changed_when: false
 
     - name: Ensure output from ssh-keygen is verified
+      tags:
+        - authorized_key
       ansible.builtin.assert:
         that:
           - "'ED25519' in __authorized_key_keygen.stdout"
 
     - name: Ensure inventory lists are formatted
+      tags:
+        - authorized_key
       ansible.builtin.set_fact:
         authorized_key_list:
           "{{ authorized_key_list |
