--- a/roles/openssh_server/molecule/default/molecule.yml
+++ b/roles/openssh_server/molecule/default/molecule.yml
@@ -9,8 +9,7 @@ driver:
 
 platforms:
   - name: almalinux9
-    box: bento/almalinux-9-arm64
-    box_architecture: arm64
+    box: bento/almalinux-9
 
 provisioner:
   name: ansible
