--- a/roles/user/molecule/default/molecule.yml
+++ b/roles/user/molecule/default/molecule.yml
@@ -9,12 +9,10 @@ driver:
 
 platforms:
   - name: almalinux9
-    box: bento/almalinux-9-arm64
-    box_architecture: arm64
+    box: bento/almalinux-9
 
   - name: debian12
-    box: bento/debian-12-arm64
-    box_architecture: arm64
+    box: bento/debian-12
 
 provisioner:
   name: ansible
