--- a/roles/filesystem/molecule/default/molecule.yml
+++ b/roles/filesystem/molecule/default/molecule.yml
@@ -2,54 +2,27 @@
 dependency:
   name: galaxy
   options:
-    requirements-file: ../../molecule/requirements.yml
+    requirements-file: ../../requirements.yml
 
 driver:
-  name: ec2
+  name: vagrant
 
 platforms:
-  - name: &c7 centos-7
-    aws_profile: molecule
-    image_owner: '125523088429'
-    image_name: 'CentOS Linux 7 x86_64 - 2211'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: centos
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *c7
+  - name: almalinux9
+    box: bento/almalinux-9
+    instance_raw_config_args:
+      - 'vm.disk :disk, name: "filesystem", size: "5GB"'
 
-  - name: &a8 almalinux-8
-    aws_profile: molecule
-    image_owner: '764336703387'
-    image_name: 'AlmaLinux OS 8.8.20230524 x86_64'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: ec2-user
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *a8
-
-  - name: &a9 almalinux-9
-    aws_profile: molecule
-    image_owner: '764336703387'
-    image_name: 'AlmaLinux OS 9.2.20230804 x86_64'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: ec2-user
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *a9
+  - name: debian12
+    box: bento/debian-12
+    instance_raw_config_args:
+      - 'vm.disk :disk, name: "filesystem", size: "5GB"'
 
 provisioner:
   name: ansible
   log: true
   options:
     diff: true
-  playbooks:
-    create: ../../../../molecule/create.yml
-    destroy: ../../../../molecule/destroy.yml
-    prepare: ../../../../molecule/prepare.yml
 
 verifier:
   name: ansible
