--- a/roles/device_info/meta/main.yml
+++ b/roles/device_info/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Gather information about devices and partitions
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: GenericLinux
       versions:
