--- a/roles/virtualenv/molecule/default/converge.yml
+++ b/roles/virtualenv/molecule/default/converge.yml
@@ -1,13 +1,9 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - role: linuxhq.linux.virtualenv
-      virtualenv_become: true
-      virtualenvs:
-        - virtualenv: /opt/ansible
-          virtualenv_command: /usr/bin/python3 -m venv
-          name:
-            - ansible<9
-          extra_args: '--no-cache-dir'
+    - role: virtualenv
+      virtualenv_list: []
+
+    - virtualenv
 ...
