--- a/roles/filesystem/molecule/default/converge.yml
+++ b/roles/filesystem/molecule/default/converge.yml
@@ -13,6 +13,9 @@
               part_type: primary
 
     - role: filesystem
+      filesystem_list: []
+
+    - role: filesystem
       filesystem_list:
         - dev: /dev/sdb1
           fstype: ext4
