--- a/roles/transmission_daemon/meta/main.yml
+++ b/roles/transmission_daemon/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - role: linuxhq.linux.epel
+  - role: epel
     tags: transmission_daemon
     when: ansible_os_family == 'RedHat'
 galaxy_info:
@@ -9,6 +9,7 @@ galaxy_info:
   description: A fast, easy, and free bittorrent client
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
