--- a/roles/transmission_daemon/vars/Debian.yml
+++ b/roles/transmission_daemon/vars/Debian.yml
@@ -1,6 +1,5 @@
 ---
-td_downloads: downloads
-td_home: /var/lib/transmission-daemon
-td_owner: debian-transmission
-td_settings: /etc/transmission-daemon/settings.json
+transmission_daemon_home: /var/lib/transmission-daemon
+transmission_daemon_owner: debian-transmission
+transmission_daemon_settings: /etc/transmission-daemon/settings.json
 ...
