--- a/roles/unbound/meta/main.yml
+++ b/roles/unbound/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: A validating, recursive, caching DNS resolver
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
