[Change] Add role runs with empty inventory to converge tests

--- a/roles/unbound/molecule/default/converge.yml
+++ b/roles/unbound/molecule/default/converge.yml
@@ -2,6 +2,8 @@
 - name: Ensure test play is executed
   hosts: all
   roles:
+    - unbound
+
     - role: unbound
       unbound_forward_zones:
         '.':
