[Change] Update tftp_server role and associated molecule tests

--- a/roles/tftp_server/molecule/default/converge.yml
+++ b/roles/tftp_server/molecule/default/converge.yml
@@ -1,7 +1,9 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - role: linuxhq.linux.tftp_server
+    - tftp_server
+
+    - role: tftp_server
       tftp_server_exec_start: /usr/sbin/in.tftpd -c -p -s /var/lib/tftpboot
 ...
