--- a/roles/tftp_server/meta/main.yml
+++ b/roles/tftp_server/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Trivial File Transfer Protocol
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
